@@ -2,6 +2,7 @@
 ======
 
  - Search messages
+ - Speak messages
  - Offline note
 
 0.9.90
